Fixed drop shadow being cut off of carsouel items.

--- a/src/sass/components/Carousel.scss
+++ b/src/sass/components/Carousel.scss
@@ -4,5 +4,4 @@
     top: 0;
     height: 100%;
     width: 100%;
-    overflow: hidden;
 }
